--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   /* text-align: center; */
   /* border: 1px solid black; */
+  /* z-index: 999; */
 }
 
 .ViewPort {
@@ -13,7 +14,7 @@
   top: 0;
   left: 0;
   right: 0;
-  /* z-index: 999; */
+  /* z-index: 1; */
   /* Set an appropriate z-index value to ensure it's above other elements */
   /* Additional styling if needed */
   /* background-color: white; */
@@ -31,6 +32,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  z-index: 999;
 }
 
 .Footer {
@@ -38,6 +40,7 @@
   height: fit-content;
   background: black;
   color: white;
+  /* z-index: 2; */
 }
 
 @keyframes App-logo-spin {
